--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -12,6 +13,7 @@
     "element-ui": "^2.12.0",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
+    "less-loader": "^6.1.2",
     "mavon-editor": "^2.7.6",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
@@ -27,6 +29,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less-loader": "^6.1.2",
     "prettier": "^1.18.2",
     "vue-template-compiler": "^2.6.10"
   }
