--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
     "html2canvas": "^1.0.0-rc.5",
+    "js-cookies": "^1.0.4",
     "jspdf": "^1.5.3",
     "less-loader": "^6.1.2",
     "mavon-editor": "^2.7.6",
