--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "js-cookies": "^1.0.4",
     "jspdf": "^1.5.3",
+    "koa": "^2.13.1",
     "less-loader": "^6.1.2",
     "mavon-editor": "^2.7.6",
     "vue": "^2.6.10",
@@ -30,7 +31,10 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "koa": "^2.13.1",
+    "less": "^4.1.1",
     "less-loader": "^6.1.2",
+    "nodemon": "^2.0.7",
     "prettier": "^1.18.2",
     "vue-template-compiler": "^2.6.10"
   }
