--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "js-cookies": "^1.0.4",
     "jspdf": "^1.5.3",
     "koa": "^2.13.1",
+    "koa-body": "^4.2.0",
+    "koa-cors": "^0.0.16",
+    "koa-router": "^10.0.0",
     "less-loader": "^6.1.2",
     "mavon-editor": "^2.7.6",
     "vue": "^2.6.10",
@@ -32,6 +35,9 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "koa": "^2.13.1",
+    "koa-body": "^4.2.0",
+    "koa-cors": "^0.0.16",
+    "koa-router": "^10.0.0",
     "less": "^4.1.1",
     "less-loader": "^6.1.2",
     "nodemon": "^2.0.7",
